Support multiple Minecraft versions